--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "flowync"
-version = "1.8.0"
+version = "1.8.1"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
 edition = "2018"
 description = "A simple utility for multithreading a/synchronization"
@@ -10,3 +10,6 @@ keywords = ["async", "sync", "std", "multi-thread", "non-blocking"]
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/Ar37-rs/flowync"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
