--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "flowync"
-version = "1.8.9"
+version = "2.0.0"
 authors = ["Ar37-rs <adyaro37@gmail.com>"]
-edition = "2018"
+edition = "2021"
 description = "A simple utility for multithreading a/synchronization"
 documentation = "https://docs.rs/flowync"
 readme = "README.md"
@@ -13,10 +13,10 @@ repository = "https://github.com/Ar37-rs/flowync"
 
 [features]
 default = []
-parking-lot = ["parking_lot"]
+use-usync = ["usync"]
 
-[dependencies.parking_lot]
-version = "0.11"
+[dependencies.usync]
+version = "0.1"
 optional = true
 
 [dev-dependencies]
